# vortex-auv

./: .clang-format  .codespellignore  .codespellrc  .gitignore  .gitmodules  .pre-commit-config-local.yaml  .pre-commit-config.yaml  .pylintrc  .releaserc  .travis.yml  Dockerfile  Dockerfile.dev  LICENSE  README.md  activate_thrusters.sh  catkin.blacklist  codecov.yml  dependencies.repos  dependencies.rosinstall  docker-compose.yml  entrypoint.sh  fsm.sh  install-prereq.sh  kill.sh  launch.sh  manta_real.launch  manta_simulator.launch  mypy.ini  packages.txt  perception_sim.sh  pyproject.toml  q  requirements.sh  requirements.txt  ros2.repos  roscore.sh  ruff.toml  vortex_auv.repos
acoustics/acoustics_data_record/: CMakeLists.txt  README  package.xml
acoustics/acoustics_data_record/acoustics_data_record/: acoustics_data_record_lib.py  acoustics_data_record_node.py
acoustics/acoustics_data_record/launch/: acoustics_data_record.launch.py  acoustics_data_record_launch.py
acoustics/acoustics_data_record/utilities/: display_acoustics_data_live.py
acoustics/acoustics_data_record_auv/: CMakeLists.txt  package.xml
acoustics/acoustics_data_record_auv/acoustics_data_record_auv/: acoustics_data_record_lib.py  acoustics_data_record_node.py
acoustics/acoustics_data_record_auv/launch/: acoustics_data_record_launch.py
acoustics/acoustics_data_record_auv/utilities/: display_acoustics_data_live.py
acoustics/acoustics_interface/: CMakeLists.txt  README  package.xml
acoustics/acoustics_interface/acoustics_interface/: acoustics_interface_lib.py  acoustics_interface_node.py
acoustics/acoustics_interface/launch/: acoustics_interface_launch.py
acoustics/acoustics_interface_auv/: CMakeLists.txt  package.xml
acoustics/acoustics_interface_auv/acoustics_interface_auv/: acoustics_interface_lib.py  acoustics_interface_node.py
acoustics/acoustics_interface_auv/launch/: acoustics_interface_launch.py
auv_setup/: CMakeLists.txt  README.md  package.xml
auv_setup/auv_setup/: launch_arg_common.py
auv_setup/config/environments/: trondheim_freshwater.yaml  trondheim_saltwater.yaml
auv_setup/config/robots/: beluga.yaml  gladlaks.yaml  maelstrom.yaml  manta.yaml  manta_enu.yaml  manta_rov.yaml  moby.yaml  nautilus.yaml  nautilus_bak.yaml  new_auv.yaml  orca.yaml  terrapin.yaml
auv_setup/config/thrusters/: thruster_T200.yaml
auv_setup/config/urdf/: orca.urdf.xacro
auv_setup/description/: drone.urdf.xacro  flir_blackfly_s.urdf.xacro  gripper.urdf.xacro  moby.urdf.xacro  nautilus.urdf.xacro  orca.urdf.xacro  realsense_d555.urdf.xacro
auv_setup/launch/: autopilot.launch.py  auv.launch  beluga.launch  beluga_debug.launch  dp.launch.py  dp_quat.launch.py  drone_description.launch.py  gladlaks.launch  manta.launch  manta_simulator.launch  moby.launch.py  nucleus_odom_transformer.launch.py  orca.launch.py  orca_description.launch.py  orca_sim.launch.py  orca_tf_tree.launch.py  pc.launch  pc.launch.py  rov.launch  state_estimation.launch.py  tf.launch  thruster.launch.py  topside.launch  topside.launch.py
control/adap_backstepping_controller/: CMakeLists.txt  package.xml
control/adap_backstepping_controller/adap_backstepping_controller/: adap_backstepping_controller.py  adap_backstepping_controller_node.py
control/adap_backstepping_controller/config/: adap_backstepping_controller.yaml
control/adap_backstepping_controller/launch/: adap_backstepping_controller.launch.py
control/dp_adapt_backs_controller/: CMakeLists.txt  README.md  package.xml
control/dp_adapt_backs_controller/config/: adapt_params.yaml  adapt_params_nautilus.yaml  adapt_params_nautilus_sim.yaml
control/dp_adapt_backs_controller/launch/: dp_adapt_backs_controller.launch.py
control/dp_adapt_backs_controller/src/: dp_adapt_backs_controller.cpp  dp_adapt_backs_controller_comp.cpp  dp_adapt_backs_controller_node.cpp  dp_adapt_backs_controller_ros.cpp  dp_adapt_backs_controller_utils.cpp  dp_composed_bringup.cpp
control/dp_adapt_backs_controller/test/: CMakeLists.txt  dp_adapt_backs_controller_tests.cpp
control/dp_adapt_backs_controller_quat/: CMakeLists.txt  README.md  package.xml
control/dp_adapt_backs_controller_quat/config/: adapt_params_nautilus.yaml  adapt_params_nautilus_sim.yaml  adapt_params_orca.yaml
control/dp_adapt_backs_controller_quat/launch/: dp_adapt_backs_controller_quat.launch.py
control/dp_adapt_backs_controller_quat/src/: dp_adapt_backs_controller.cpp  (+2 more)
control/dp_controller/: CMakeLists.txt  package.xml
control/pid_controller_dp/: CMakeLists.txt  README.md  package.xml
control/pid_controller_dp_euler/: CMakeLists.txt  README.md  package.xml
control/sensor_interface/: CMakeLists.txt  package.xml
control/thruster_interface/: CMakeLists.txt  package.xml
control/velocity_controller/: CMakeLists.txt  README.md  package.xml
control/velocity_controller_lqr/: CMakeLists.txt  README.md  README.txt  Readme.md  package.xml  requirements.txt
control/vortex/: CMakeLists.txt  README.md  package.xml
control/vortex_allocator/: CMakeLists.txt
control/vortex_controller/: CMakeLists.txt
control/vortex_estimator/: CMakeLists.txt  package.xml
control/vortex_msgs/: CMakeLists.txt  package.xml
docker/: Dockerfile  (+6 more)
joystick_control/: CMakeLists.txt  package.xml
joystick_control/launch/: joystick_control.launch  pc.launch
joystick_control/scripts/: joystick_control.py
tau_converter/: CMakeLists.txt  package.xml
tau_converter/scripts/: sub.py  tau_converter.py
vortex_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
vortex_msgs/action/: ControlMode.action  LosPathFollowing.action  Move.action  MoveRelative.action  SetVelocity.action  VtfPathFollowing.action
vortex_msgs/msg/: BBox.msg  BBoxes.msg  CameraFeedSelection.msg  CameraObjectInfo.msg  ContainerID.msg  Debug.msg  DpSetpoint.msg  GuidanceData.msg  LightInput.msg  Manipulator.msg  ObjectPosition.msg  PropulsionCommand.msg  Pwm.msg  RovState.msg  ThrusterForces.msg  Torpedo_msgs.msg
vortex_msgs/srv/: ControlMode.srv  LandmarkPose.srv  LaunchTorpedo.srv  SetPidGains.srv  SetVelocity.srv  ThrustersWrite.srv
(+2369 files in other folders)
