<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acoustics_interface</name>
  <version>1.0.0</version>
  <description>Communicates and gets data from acoustics PCB</description>
  <maintainer email="karate.martynas1@gmail.com">vortex</maintainer>
  <license>MIT</license>

  <!-- Execution dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ros2launch</depend>

  <!-- Export the build type as ament_cmake for CMake projects -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
