<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dp_adapt_backs_controller_quat</name>
  <version>1.0.0</version>
  <description>Adaptive backstepping controller for DP</description>
  <maintainer email="cypriano@stud.ntnu.no">Cyprian Osinski</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>vortex_msgs</depend>
  <depend>vortex_utils</depend>
  <depend>vortex_utils_ros</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
