<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velocity_controller_lqr</name>
  <version>0.6.9</version>
  <description>Velocity controller package for the AUV Orca</description>
  <maintainer email="cyprian.github@gmail.com">cyprian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vortex_msgs</depend>
  <depend>python-control-pip</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
